# hew

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: alpine-llvm.yml  ci.yml  nightly-sanitizers.yml  release.yml
adze-cli/src/: client.rs  index.rs  lockfile.rs  main.rs  manifest.rs  resolver.rs  signing.rs  tarball.rs
adze-cli/tests/: test_symlink.rs
docs/: cross-platform-build-guide.md  syntax-data.json
docs/plans/: 2026-03-02-interactive-debugging-design.md  2026-03-02-interactive-debugging-impl.md
docs/specs/: HEW-SPEC.md  MACHINE-SPEC.md
examples/playground/concurrency/: actor_pipeline.hew  counter_actor.hew  supervisor.expected  supervisor.hew
hew-astgen/src/: codegen.rs
hew-cli/src/: compile.rs  machine.rs  main.rs  watch.rs  wire.rs
hew-cli/src/doc/: extract.rs  highlight.rs  render.rs
hew-cli/src/test_runner/: discovery.rs  mod.rs  output.rs  runner.rs
hew-codegen/: CMakeLists.txt
hew-codegen/include/hew/: ast_types.h  codegen.h  debug_info.h
hew-codegen/include/hew/mlir/: HewOps.td  MLIRGen.h
hew-codegen/src/: CMakeLists.txt  codegen.cpp  codegen_main.cpp  debug_info.cpp  msgpack_reader.cpp
hew-codegen/src/mlir/: MLIRGen.cpp  MLIRGenActor.cpp  MLIRGenExpr.cpp  MLIRGenHelpers.h  MLIRGenIfLet.cpp  MLIRGenMatch.cpp  MLIRGenStmt.cpp  MLIRGenSupervisor.cpp  MLIRGenWire.cpp
hew-codegen/tests/: CMakeLists.txt  test_mlir_dialect.cpp  test_translate.cpp
hew-codegen/tests/examples/e2e_actors/: actor_pipeline.hew  close_await_actor.hew  close_await_multi.expected  close_await_multi.hew  fan_out_fan_in.hew  ping_pong.hew
hew-codegen/tests/examples/e2e_base64/: base64_test.hew
hew-codegen/tests/examples/e2e_bytes/: bytes_literal.expected  bytes_literal.hew
hew-codegen/tests/examples/e2e_collections/: hashmap_keys_method.hew  vec_filter.hew  vec_fold.hew  vec_join.expected  vec_join.hew  vec_map.hew
hew-codegen/tests/examples/e2e_crypto/: crypto_test.hew
hew-codegen/tests/examples/e2e_hex/: hex_test.hew
hew-codegen/tests/examples/e2e_imports/: test_import_multi_stdlib.hew
hew-codegen/tests/examples/e2e_machine/: machine_basic.hew  machine_circuit_breaker.hew  machine_counter.hew  machine_elided.hew  machine_event_payload.expected  machine_event_payload.hew  machine_gauge.hew  machine_guard.expected  machine_guard.hew  machine_match.hew  machine_qualified_event.hew  machine_self_transition.hew  machine_systematic.hew  machine_traffic.hew
hew-codegen/tests/examples/e2e_strings/: string_lines.expected  string_lines.hew  string_predicates.expected  string_predicates.hew
hew-codegen/tests/examples/e2e_supervisor_child/: supervisor_child.hew
hew-codegen/tests/examples/e2e_supervisor_named_child/: supervisor_named_child.expected  supervisor_named_child.hew
hew-codegen/tests/examples/e2e_supervisor_nested/: supervisor_nested.hew
hew-codegen/tests/examples/e2e_supervisor_restart/: supervisor_restart.hew
hew-codegen/tests/examples/e2e_wire/: wire_actor_message.expected  wire_actor_message.hew  wire_binary_roundtrip.expected  wire_binary_roundtrip.hew  wire_versioned.expected  wire_versioned.hew
hew-export-macro/src/: lib.rs
hew-export-macro/tests/: apply_attribute.rs
hew-lexer/src/: lib.rs
hew-lsp/src/: server.rs
hew-observe/test-harness/: .gitignore  observe_workload.hew
hew-parser/src/: ast.rs  fmt.rs  module.rs  parser.rs
hew-parser/tests/: comparison.rs  impl_assoc_types.rs  machine_decl.rs  parser_error_recovery.rs  spawn_dotted.rs
hew-runtime/src/: actor.rs  arc.rs  arena.rs  blocking_pool.rs  bridge.rs  bytes.rs  cluster.rs  connection.rs  coro.rs  crash.rs  deque.rs  deterministic.rs  encryption.rs  env.rs  generator.rs  hashmap.rs  hashset.rs  hew_node.rs  io_time.rs  lib.rs  link.rs  log_core.rs  mailbox.rs  monitor.rs  mpsc.rs  pool.rs  process.rs  random.rs  rc.rs  remote_sup.rs  routing.rs  scheduler.rs  scheduler_wasm.rs  scope.rs  signal.rs  stream.rs  string.rs  supervisor.rs  task_scope.rs  timer.rs  (+3 more)
hew-runtime/tests/: ffi_boundary.rs  generator_stream_regression.rs  links_monitors_integration.rs  supervision_lifecycle.rs
hew-serialize/src/: enrich.rs  msgpack.rs
hew-stdlib-gen/src/: main.rs
hew-types/: build.rs
hew-types/src/: check.rs  cycle.rs  env.rs  error.rs  stdlib_loader.rs  traits.rs  ty.rs  unify.rs
hew-types/tests/: associated_types.rs  generic_enum_variants.rs  machine_typecheck.rs  module_system_test.rs  trait_bounds.rs  trait_object_order.rs  type_error_coverage.rs
installers/alpine/: Dockerfile.llvm  build-alpine-codegen.sh
installers/docker/: Dockerfile  Dockerfile.release
scripts/debug/: hew_lldb.py
std/crypto/crypto/src/: lib.rs
std/crypto/password/src/: lib.rs
std/encoding/base64/src/: lib.rs
std/encoding/compress/src/: lib.rs
std/encoding/json/src/: lib.rs
std/encoding/msgpack/src/: lib.rs
std/encoding/protobuf/src/: lib.rs
std/encoding/toml/src/: lib.rs
std/encoding/yaml/src/: lib.rs
std/net/http/src/: client.rs  server.rs
std/net/websocket/src/: lib.rs
std/text/regex/src/: lib.rs
std/time/cron/src/: lib.rs
std/time/datetime/src/: lib.rs
